leg/xml.leg.c
/* A recursive-descent parser generated by peg 0.1.15 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 18

#include <stdint.h>
# include <stdio.h>
# include <stdlib.h>
# include <unistd.h>
# include <string.h>
# include <libgen.h>
# include <assert.h>
# include <time.h>
#include <sys/time.h> // gettimeofday

  typedef struct Header Header;

  struct Header {
    char   *text;
    Header *next;
  };

  FILE *input= 0;

  int   verboseFlag= 0;

  static int	 lineNumber= 0;
  static char	*fileName= 0;
  static char	*trailer= 0;
  static Header	*headers= 0;

  void makeHeader(char *text);
  void makeTrailer(char *text);

  void yyerror(char *message);

# define YY_INPUT(buf, result, max)		\
  {						\
    int c= getc(input);				\
    if ('\n' == c || '\r' == c) ++lineNumber;	\
    result= (EOF == c) ? 0 : (*(buf)= c, 1);	\
  }

# define YY_LOCAL(T)	static T
# define YY_RULE(T)	static T

#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_CDATA(yycontext *yy); /* 18 */
YY_RULE(int) yy_Text(yycontext *yy); /* 17 */
YY_RULE(int) yy_CDataSec(yycontext *yy); /* 16 */
YY_RULE(int) yy_str(yycontext *yy); /* 15 */
YY_RULE(int) yy_String(yycontext *yy); /* 14 */
YY_RULE(int) yy_COMMENT(yycontext *yy); /* 13 */
YY_RULE(int) yy_Value(yycontext *yy); /* 12 */
YY_RULE(int) yy_NAME(yycontext *yy); /* 11 */
YY_RULE(int) yy_Content(yycontext *yy); /* 10 */
YY_RULE(int) yy_Attribute(yycontext *yy); /* 9 */
YY_RULE(int) yy_Name(yycontext *yy); /* 8 */
YY_RULE(int) yy_dtd_text(yycontext *yy); /* 7 */
YY_RULE(int) yy_pro_str(yycontext *yy); /* 6 */
YY_RULE(int) yy_Xml(yycontext *yy); /* 5 */
YY_RULE(int) yy_DTD(yycontext *yy); /* 4 */
YY_RULE(int) yy_S(yycontext *yy); /* 3 */
YY_RULE(int) yy_PROLOG(yycontext *yy); /* 2 */
YY_RULE(int) yy_File(yycontext *yy); /* 1 */


YY_RULE(int) yy_CDATA(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "CDATA"));
  l2:;	
  {  int yypos3= yy->__pos, yythunkpos3= yy->__thunkpos;
  {  int yypos4= yy->__pos, yythunkpos4= yy->__thunkpos;  if (!yymatchString(yy, "]]>")) goto l4;  goto l3;
  l4:;	  yy->__pos= yypos4; yy->__thunkpos= yythunkpos4;
  }
  {  int yypos5= yy->__pos, yythunkpos5= yy->__thunkpos;  if (!yymatchString(yy, "<![CDATA[")) goto l5;  goto l3;
  l5:;	  yy->__pos= yypos5; yy->__thunkpos= yythunkpos5;
  }  if (!yymatchDot(yy)) goto l3;  goto l2;
  l3:;	  yy->__pos= yypos3; yy->__thunkpos= yythunkpos3;
  }
  {  int yypos6= yy->__pos, yythunkpos6= yy->__thunkpos;  if (!yymatchString(yy, "<![CDATA[")) goto l6;  if (!yy_CDATA(yy)) goto l6;  if (!yymatchString(yy, "]]>")) goto l6;  if (!yy_CDATA(yy)) goto l6;  goto l7;
  l6:;	  yy->__pos= yypos6; yy->__thunkpos= yythunkpos6;
  }
  l7:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "CDATA", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "CDATA", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Text(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Text"));
  {  int yypos11= yy->__pos, yythunkpos11= yy->__thunkpos;  if (!yymatchChar(yy, '<')) goto l11;  goto l8;
  l11:;	  yy->__pos= yypos11; yy->__thunkpos= yythunkpos11;
  }  if (!yymatchDot(yy)) goto l8;
  l9:;	
  {  int yypos10= yy->__pos, yythunkpos10= yy->__thunkpos;
  {  int yypos12= yy->__pos, yythunkpos12= yy->__thunkpos;  if (!yymatchChar(yy, '<')) goto l12;  goto l10;
  l12:;	  yy->__pos= yypos12; yy->__thunkpos= yythunkpos12;
  }  if (!yymatchDot(yy)) goto l10;  goto l9;
  l10:;	  yy->__pos= yypos10; yy->__thunkpos= yythunkpos10;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "Text", yy->__buf+yy->__pos));
  return 1;
  l8:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Text", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_CDataSec(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "CDataSec"));  if (!yymatchString(yy, "<![CDATA[")) goto l13;  if (!yy_CDATA(yy)) goto l13;  yyDo(yy, yySet, 0, 0);  if (!yymatchString(yy, "]]>")) goto l13;
  l14:;	
  {  int yypos15= yy->__pos, yythunkpos15= yy->__thunkpos;  if (!yy_S(yy)) goto l15;  goto l14;
  l15:;	  yy->__pos= yypos15; yy->__thunkpos= yythunkpos15;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "CDataSec", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 1, 0);
  return 1;
  l13:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "CDataSec", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_str(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "str"));
  l17:;	
  {  int yypos18= yy->__pos, yythunkpos18= yy->__thunkpos;
  {  int yypos19= yy->__pos, yythunkpos19= yy->__thunkpos;  if (!yymatchChar(yy, '"')) goto l19;  goto l18;
  l19:;	  yy->__pos= yypos19; yy->__thunkpos= yythunkpos19;
  }  if (!yymatchDot(yy)) goto l18;  goto l17;
  l18:;	  yy->__pos= yypos18; yy->__thunkpos= yythunkpos18;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "str", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_String(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "String"));  if (!yymatchChar(yy, '"')) goto l20;  if (!yy_str(yy)) goto l20;  if (!yymatchChar(yy, '"')) goto l20;
  yyprintf((stderr, "  ok   %s @ %s\n", "String", yy->__buf+yy->__pos));
  return 1;
  l20:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "String", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_COMMENT(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "COMMENT"));  if (!yymatchString(yy, "<!--")) goto l21;
  l22:;	
  {  int yypos23= yy->__pos, yythunkpos23= yy->__thunkpos;
  {  int yypos24= yy->__pos, yythunkpos24= yy->__thunkpos;  if (!yymatchString(yy, "-->")) goto l24;  goto l23;
  l24:;	  yy->__pos= yypos24; yy->__thunkpos= yythunkpos24;
  }  if (!yymatchDot(yy)) goto l23;  goto l22;
  l23:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;
  }  if (!yymatchString(yy, "-->")) goto l21;
  l25:;	
  {  int yypos26= yy->__pos, yythunkpos26= yy->__thunkpos;  if (!yy_S(yy)) goto l26;  goto l25;
  l26:;	  yy->__pos= yypos26; yy->__thunkpos= yythunkpos26;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "COMMENT", yy->__buf+yy->__pos));
  return 1;
  l21:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "COMMENT", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Value(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Value"));
  {  int yypos28= yy->__pos, yythunkpos28= yy->__thunkpos;  if (!yy_Xml(yy)) goto l29;  goto l28;
  l29:;	  yy->__pos= yypos28; yy->__thunkpos= yythunkpos28;  if (!yy_CDataSec(yy)) goto l30;  goto l28;
  l30:;	  yy->__pos= yypos28; yy->__thunkpos= yythunkpos28;  if (!yy_Text(yy)) goto l27;
  }
  l28:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Value", yy->__buf+yy->__pos));
  return 1;
  l27:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Value", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_NAME(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "NAME"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\004\376\377\377\007\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l31;
  l32:;	
  {  int yypos33= yy->__pos, yythunkpos33= yy->__thunkpos;
  {  int yypos34= yy->__pos, yythunkpos34= yy->__thunkpos;  if (!yymatchChar(yy, '-')) goto l35;  goto l34;
  l35:;	  yy->__pos= yypos34; yy->__thunkpos= yythunkpos34;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\100\377\007\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l33;
  }
  l34:;	  goto l32;
  l33:;	  yy->__pos= yypos33; yy->__thunkpos= yythunkpos33;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "NAME", yy->__buf+yy->__pos));
  return 1;
  l31:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "NAME", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Content(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Content"));
  {  int yypos37= yy->__pos, yythunkpos37= yy->__thunkpos;  if (!yy_Value(yy)) goto l38;  goto l37;
  l38:;	  yy->__pos= yypos37; yy->__thunkpos= yythunkpos37;  if (!yy_COMMENT(yy)) goto l36;
  }
  l37:;	
  l39:;	
  {  int yypos40= yy->__pos, yythunkpos40= yy->__thunkpos;
  {  int yypos41= yy->__pos, yythunkpos41= yy->__thunkpos;  if (!yy_Value(yy)) goto l42;  goto l41;
  l42:;	  yy->__pos= yypos41; yy->__thunkpos= yythunkpos41;  if (!yy_COMMENT(yy)) goto l40;
  }
  l41:;	  goto l39;
  l40:;	  yy->__pos= yypos40; yy->__thunkpos= yythunkpos40;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "Content", yy->__buf+yy->__pos));
  return 1;
  l36:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Content", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Attribute(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Attribute"));  if (!yy_Name(yy)) goto l43;
  l44:;	
  {  int yypos45= yy->__pos, yythunkpos45= yy->__thunkpos;  if (!yy_S(yy)) goto l45;  goto l44;
  l45:;	  yy->__pos= yypos45; yy->__thunkpos= yythunkpos45;
  }  if (!yymatchChar(yy, '=')) goto l43;
  l46:;	
  {  int yypos47= yy->__pos, yythunkpos47= yy->__thunkpos;  if (!yy_S(yy)) goto l47;  goto l46;
  l47:;	  yy->__pos= yypos47; yy->__thunkpos= yythunkpos47;
  }  if (!yy_String(yy)) goto l43;
  yyprintf((stderr, "  ok   %s @ %s\n", "Attribute", yy->__buf+yy->__pos));
  return 1;
  l43:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Attribute", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Name(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Name"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\004\376\377\377\007\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l48;
  l49:;	
  {  int yypos50= yy->__pos, yythunkpos50= yy->__thunkpos;
  {  int yypos51= yy->__pos, yythunkpos51= yy->__thunkpos;  if (!yymatchChar(yy, '-')) goto l52;  goto l51;
  l52:;	  yy->__pos= yypos51; yy->__thunkpos= yythunkpos51;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\100\377\007\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l50;
  }
  l51:;	  goto l49;
  l50:;	  yy->__pos= yypos50; yy->__thunkpos= yythunkpos50;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "Name", yy->__buf+yy->__pos));
  return 1;
  l48:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Name", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_dtd_text(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "dtd_text"));
  l54:;	
  {  int yypos55= yy->__pos, yythunkpos55= yy->__thunkpos;
  {  int yypos56= yy->__pos, yythunkpos56= yy->__thunkpos;  if (!yymatchChar(yy, '>')) goto l56;  goto l55;
  l56:;	  yy->__pos= yypos56; yy->__thunkpos= yythunkpos56;
  }  if (!yymatchDot(yy)) goto l55;  goto l54;
  l55:;	  yy->__pos= yypos55; yy->__thunkpos= yythunkpos55;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "dtd_text", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_pro_str(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "pro_str"));
  l58:;	
  {  int yypos59= yy->__pos, yythunkpos59= yy->__thunkpos;
  {  int yypos60= yy->__pos, yythunkpos60= yy->__thunkpos;  if (!yymatchString(yy, "?>")) goto l60;  goto l59;
  l60:;	  yy->__pos= yypos60; yy->__thunkpos= yythunkpos60;
  }  if (!yymatchDot(yy)) goto l59;  goto l58;
  l59:;	  yy->__pos= yypos59; yy->__thunkpos= yythunkpos59;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "pro_str", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_Xml(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Xml"));  if (!yymatchChar(yy, '<')) goto l61;  if (!yy_Name(yy)) goto l61;
  l62:;	
  {  int yypos63= yy->__pos, yythunkpos63= yy->__thunkpos;  if (!yy_S(yy)) goto l63;
  l64:;	
  {  int yypos65= yy->__pos, yythunkpos65= yy->__thunkpos;  if (!yy_S(yy)) goto l65;  goto l64;
  l65:;	  yy->__pos= yypos65; yy->__thunkpos= yythunkpos65;
  }  if (!yy_Attribute(yy)) goto l63;  goto l62;
  l63:;	  yy->__pos= yypos63; yy->__thunkpos= yythunkpos63;
  }
  l66:;	
  {  int yypos67= yy->__pos, yythunkpos67= yy->__thunkpos;  if (!yy_S(yy)) goto l67;  goto l66;
  l67:;	  yy->__pos= yypos67; yy->__thunkpos= yythunkpos67;
  }
  {  int yypos68= yy->__pos, yythunkpos68= yy->__thunkpos;  if (!yymatchString(yy, "/>")) goto l69;  goto l68;
  l69:;	  yy->__pos= yypos68; yy->__thunkpos= yythunkpos68;  if (!yymatchChar(yy, '>')) goto l61;
  l70:;	
  {  int yypos71= yy->__pos, yythunkpos71= yy->__thunkpos;  if (!yy_S(yy)) goto l71;  goto l70;
  l71:;	  yy->__pos= yypos71; yy->__thunkpos= yythunkpos71;
  }
  {  int yypos72= yy->__pos, yythunkpos72= yy->__thunkpos;  if (!yy_Content(yy)) goto l72;  goto l73;
  l72:;	  yy->__pos= yypos72; yy->__thunkpos= yythunkpos72;
  }
  l73:;	  if (!yymatchString(yy, "</")) goto l61;  if (!yy_NAME(yy)) goto l61;  if (!yymatchChar(yy, '>')) goto l61;
  }
  l68:;	
  l74:;	
  {  int yypos75= yy->__pos, yythunkpos75= yy->__thunkpos;  if (!yy_S(yy)) goto l75;  goto l74;
  l75:;	  yy->__pos= yypos75; yy->__thunkpos= yythunkpos75;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "Xml", yy->__buf+yy->__pos));
  return 1;
  l61:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Xml", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_DTD(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "DTD"));  if (!yymatchString(yy, "<!")) goto l76;  if (!yy_dtd_text(yy)) goto l76;  if (!yymatchChar(yy, '>')) goto l76;
  yyprintf((stderr, "  ok   %s @ %s\n", "DTD", yy->__buf+yy->__pos));
  return 1;
  l76:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DTD", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_S(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "S"));  if (!yymatchClass(yy, (unsigned char *)"\000\046\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l77;
  yyprintf((stderr, "  ok   %s @ %s\n", "S", yy->__buf+yy->__pos));
  return 1;
